Rollback pydantic-AI branch to commit b4ffe1598a9a3acffa466eebae4e0506fb4e6a4d
Co-authored-by: ainan-ahmed <25773330+ainan-ahmed@users.noreply.github.com>